# CSC299-Project

./: README.md  SUMMARY.md  ai_consultation_log.md  habit_tracker.py  video.txt
tasks1/: README.md  tasks.py
tasks2/: README.md  tasks.py
tasks3/: pyproject.toml  tasks.json  test_tasks.py
tasks3/mkdir tests/touch tests/: test_inc.py
tasks3/src/tasks3/: __init__.py
tasks4/: pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: main.py
